--- a/template.tex
+++ b/template.tex
@@ -1,1 +1,12 @@
-Template for lecture notes
+\documentclass{article}
+\usepackage{amsmath}
+\usepackage{amssymb}
+
+\title{15326 - Computational Microeconomics\\
+Homework 0}
+
+\begin{document}
+
+
+
+\end{document}
