--- a/2024-09-07 lecture notes/lecture.tex
+++ b/2024-09-07 lecture notes/lecture.tex
@@ -11,6 +11,8 @@ Homework 0}
 
 \section{Conditional probability}
 
+TEST
+
 Suppose, WLOG, that the child was first offered the red and blue toys, and initially picked the blue one. We want to find the probability that, when offered the red and green one after the baby got bored of the blue toy, the baby will choose the red toy. Thus, \\
 $P(r \succ g | b \succ r) $\\
 $= P(r \succ g \cap b \succ r)/P(b \succ r)$\\
