--- a/template.tex
+++ b/template.tex
@@ -1,12 +1,14 @@
 \documentclass{article}
-\usepackage{amsmath}
-\usepackage{amssymb}
+\usepackage{graphicx} % Required for inserting images
 
-\title{15326 - Computational Microeconomics\\
-Homework 0}
+\title{Title}
+\author{Author}
+\date{January 1900}
 
 \begin{document}
 
+\maketitle
 
+\section{Introduction}
 
 \end{document}
